修复 php 输入问题

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <script src="codemirror/mode/javascript/javascript.js"></script>
     <script src="codemirror/mode/ruby/ruby.js"></script>
     <script src="codemirror/mode/php/php.js"></script>
+    <script src="codemirror/mode/clike/clike.js"></script>
+    <script src="codemirror/mode/xml/xml.js"></script>
+    <script src="codemirror/mode/css/css.js"></script>
+    <script src="codemirror/mode/htmlmixed/htmlmixed.js"></script>
     <script src="codemirror/mode/perl/perl.js"></script>
     <script src="codemirror/mode/lua/lua.js"></script>
     <script src="assets/checkUpdate.js"></script>
