--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/options.css">
     <link rel="stylesheet" href="codemirror/lib/codemirror.css">
     <script src="assets/jquery-3.3.1.min.js"></script>
+    <script src="assets/sweetalert2.all.min.js"></script>
     <script src="codemirror/lib/codemirror.js"></script>
     <script src="codemirror/addon/display/placeholder.js"></script>
     <script src="codemirror/mode/shell/shell.js"></script>
