新增codemirrorloader，将所有插件用一个脚本引入

--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,10 @@
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/options.css">
-    <link rel="stylesheet" href="codemirror/lib/codemirror.css">
-    <script src="assets/jquery-3.3.1.min.js"></script>
-    <script src="assets/sweetalert2.all.min.js"></script>
-    <script src="codemirror/lib/codemirror.js"></script>
-    <script src="codemirror/addon/display/placeholder.js"></script>
-    <script src="codemirror/mode/shell/shell.js"></script>
-    <script src="codemirror/mode/powershell/powershell.js"></script>
-    <script src="codemirror/mode/python/python.js"></script>
-    <script src="codemirror/mode/javascript/javascript.js"></script>
-    <script src="codemirror/mode/ruby/ruby.js"></script>
-    <script src="codemirror/mode/php/php.js"></script>
-    <script src="codemirror/mode/clike/clike.js"></script>
-    <script src="codemirror/mode/xml/xml.js"></script>
-    <script src="codemirror/mode/css/css.js"></script>
-    <script src="codemirror/mode/htmlmixed/htmlmixed.js"></script>
-    <script src="codemirror/mode/perl/perl.js"></script>
-    <script src="codemirror/mode/lua/lua.js"></script>
+    <link rel="stylesheet" href="assets/style/options.css">
+    <script src="assets/plugins/jquery-3.3.1.min.js"></script>
+    <script src="assets/plugins/sweetalert2.all.min.js"></script>
+    <script src="assets/plugins/codemirrorloader.js"></script>
     <title>快捷命令</title>
 </head>
 
