--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="assets/style/options.css">
     <script src="assets/plugins/jquery-3.3.1.min.js"></script>
     <script src="assets/plugins/sweetalert2.all.min.js"></script>
+    <script src="assets/plugins/mousetrap.min.js"></script>
+    <script src="assets/plugins/mousetrap-record.min.js"></script>
     <script src="assets/plugins/codemirrorloader.js"></script>
     <title>快捷命令</title>
 </head>
 
 <body>
     <div id="options"></div>
-    <pre id="out"></pre>
+    <pre id="out" class="output"></pre>
     <script src="assets/options.js"></script>
     <script src="assets/index.js"></script>
 </body>
