--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/style/options.css">
     <script src="assets/plugins/jquery-3.3.1.min.js"></script>
     <script src="assets/plugins/sweetalert2.all.min.js"></script>
+    <script src="assets/plugins/beautify.min.js"></script>
     <script src="assets/plugins/mousetrap.min.js"></script>
     <script src="assets/plugins/mousetrap-record.min.js"></script>
     <script src="assets/plugins/codemirrorloader.js"></script>
