--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/style/options.css">
+    <link rel="stylesheet" href="assets/plugins/select2/select2.min.css">
     <script src="assets/plugins/jquery-3.3.1.min.js"></script>
     <script src="assets/plugins/sweetalert2.all.min.js"></script>
     <script src="assets/plugins/beautify.min.js"></script>
     <script src="assets/plugins/mousetrap/mousetrap.min.js"></script>
     <script src="assets/plugins/mousetrap/mousetrap-record.min.js"></script>
     <script src="assets/plugins/codemirrorloader.js"></script>
+    <script src="assets/plugins/select2/select2.min.js"></script>
     <title>快捷命令</title>
 </head>
 
