--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,12 @@
 </head>
 
 <body>
-    <div id="options"></div>
-    <pre id="out" class="output"></pre>
-    <script src="assets/options.js"></script>
-    <script src="assets/index.js"></script>
+    <div id="wrapper">
+        <div id="options"></div>
+        <pre id="out" class="output"></pre>
+        <script src="assets/options.js"></script>
+        <script src="assets/index.js"></script>
+    </div>
 </body>
 
 </html>
