对大图标进行压缩

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <script src="assets/plugins/mousetrap/mousetrap-record.min.js"></script>
     <script src="assets/plugins/codemirrorloader.js"></script>
     <script src="assets/plugins/select2/select2.min.js"></script>
+    <script src="assets/plugins/picture-compressor.js"></script>
     <title>快捷命令</title>
 </head>
 
