--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/style/options.css">
     <link rel="stylesheet" href="assets/plugins/select2/select2.min.css">
+    <link rel="stylesheet" href="assets/plugins/iconfont/iconfont.css">
     <script src="assets/plugins/jquery-3.3.1.min.js"></script>
     <script src="assets/plugins/sweetalert2/sweetalert2.all.min.js"></script>
     <script src="assets/plugins/beautify.min.js"></script>
