feat: 新增 quickpanel

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
 <body>
     <div id="wrapper">
         <div id="options"></div>
+        <div id="quickpanel"></div>
         <pre id="out" class="output"></pre>
         <script src="assets/index.js"></script>
     </div>
