--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <div id="options"></div>
         <div id="quickpanel"></div>
         <pre id="out" class="output"></pre>
-        <script src="assets/index.js"></script>
+        <script type="module" src="assets/js/index.js"></script>
     </div>
 </body>
 
