--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <script src="assets/plugins/codemirrorloader.js"></script>
     <script src="assets/plugins/select2/select2.min.js"></script>
     <script src="assets/plugins/picture-compressor.js"></script>
+    <script src="assets/plugins/LunarCalendar.min.js"></script>
     <title>快捷命令</title>
 </head>
 
