--- a/src/index.template.html
+++ b/src/index.template.html
@@ -9,11 +9,8 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
-    <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="icon" type="image/ico" href="favicon.ico">
+    <script charset="UTF-8" id="LA_COLLECT" src="lib/51la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id:"KOp8li2aaoFNVcsC",ck:"KOp8li2aaoFNVcsC"})</script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
