新增quickcommand.showSystemWaitButton接口，编排用户交互分类同步添加相应功能

--- a/plugin/lib/dialog/view.html
+++ b/plugin/lib/dialog/view.html
@@ -48,6 +48,9 @@
         <div id="textarea">
           <textarea id="text-content"></textarea>
         </div>
+
+        <!-- 等待按钮对话框 -->
+        <div id="wait-button"></div>
       </div>
       <div class="button-bar">
         <button id="cancel-btn">取消</button>
