--- a/plugin/lib/dialog/view.html
+++ b/plugin/lib/dialog/view.html
@@ -51,6 +51,18 @@
 
         <!-- 等待按钮对话框 -->
         <div id="wait-button"></div>
+
+        <!-- 进度条对话框 -->
+        <div id="process">
+          <div class="process-buttons">
+            <div class="process-pause-btn" id="process-pause-btn"></div>
+            <div class="process-close-btn" id="process-close-btn"></div>
+          </div>
+          <div class="process-text" id="process-text"></div>
+          <div class="process-bar">
+            <div class="process-bar-inner" id="process-bar-inner"></div>
+          </div>
+        </div>
       </div>
       <div class="button-bar">
         <button id="cancel-btn">取消</button>
