新增quickcommand.showLoadingBar，支持显示加载条

--- a/plugin/lib/dialog/view.html
+++ b/plugin/lib/dialog/view.html
@@ -60,7 +60,7 @@
           </div>
           <div class="process-text" id="process-text"></div>
           <div class="process-bar">
-            <div class="process-bar-inner" id="process-bar-inner"></div>
+            <div id="process-bar-inner"></div>
           </div>
         </div>
       </div>
